Add S3 connectivity to load dataset directly from the S3 object and write the new words back into it

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ target/
 *.iws
 *.iml
 *.ipr
+src/main/resources/application.properties
+trie_input_dataset_v0.txt
 
 ### Eclipse ###
 .apt_generated
